Restore sponsored jumbotron structure from current site

--- a/colortypist/windows/download/index.html
+++ b/colortypist/windows/download/index.html
@@ -2,7 +2,7 @@
 active : download
 app    : colortypist-windows
 appurl : /colortypist/windows/
-layout : app-page
+layout : download-page
 
 title           : Colortypist for Windows - Free Download
 description     : Download, install and run Colortypist on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
