--- a/htmtied/windows/download/index.html
+++ b/htmtied/windows/download/index.html
@@ -2,7 +2,7 @@
 active : download
 app    : htmtied-windows
 appurl : /htmtied/windows/
-layout : app-page
+layout : download-page
 
 title           : HTMtied for Windows - Free Download
 description     : Download, install and run HTMtied on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
