--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -2,7 +2,7 @@
 active : download
 app    : injuredpixels-windows
 appurl : /injuredpixels/windows/
-layout : app-page
+layout : download-page
 
 title           : InjuredPixels for Windows - Free Download
 description     : Download, install and run InjuredPixels on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
