--- a/pixelhealer/windows/download/index.html
+++ b/pixelhealer/windows/download/index.html
@@ -2,7 +2,7 @@
 active : download
 app    : pixelhealer-windows
 appurl : /pixelhealer/windows/
-layout : app-page
+layout : download-page
 
 title           : PixelHealer for Windows - Free Download
 description     : Download, install and run PixelHealer on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
