--- a/whatsmyco/web/download/index.html
+++ b/whatsmyco/web/download/index.html
@@ -2,7 +2,7 @@
 app    : whatsmyco-web
 active : download
 appurl : /whatsmyco/web/
-layout : app-page
+layout : download-page
 
 title       : WhatsMyCo - Run In Your Browser
 description : Run WhatsMyCo in any modern browser, and on any device - on PCs, notebooks, tablets, or smartphones. No install and no plugins required.
