--- a/support/index.html
+++ b/support/index.html
@@ -6,30 +6,6 @@ heading : Support
 {% capture thecontent %}
     <p>We are always happy to hear from you.</p>
     <p>Please send your feedback, comments, suggestions or problems:</p>
-    <script type="text/javascript" src="http://form.jotformeu.com/jsform/50793528828367"></script>
+    <script type="text/javascript" src="https://form.jotformeu.com/jsform/50793528828367"></script>
 {% endcapture %}
 {% include templates/contentsection.html heading="Contact Form" %}
-
-{% capture thecontent %}
-    <p>Dislike forms? You can also send us a direct email.</p>
-    <p>Email us with as much detail as you can so we can give you the best help possible.</p>
-
-    <script type="text/javascript">
-    //<![CDATA[
-    <!--
-    var x="function f(x){var i,o=\"\",ol=x.length,l=ol;while(x.charCodeAt(l/13)!" +
-    "=50){try{x+=x;l+=l;}catch(e){}}for(i=l-1;i>=0;i--){o+=x.charAt(i);}return o" +
-    ".substr(0,ol);}f(\")71,\\\"=2;W430\\\\ o)>l720\\\\430\\\\120\\\\>Z530\\\\62" +
-    "0\\\\220\\\\%KV/430\\\\630\\\\400\\\\330\\\\330\\\\710\\\\N7W410\\\\400\\\\" +
-    "010\\\\420\\\\EF?710\\\\610\\\\300\\\\q=8(26<*\\\"\\\\7520\\\\ 03%> -w#?& )" +
-    "*d130\\\\y%'3(730\\\\430\\\\aEI[TQEF030\\\\ZGP120\\\\^[L710\\\\p620\\\\YZIK" +
-    "E500\\\\E730\\\\000\\\\t\\\\Ns{iuim7lysxap}u\\\"(f};o nruter};))++y(^)i(tAe" +
-    "doCrahc.x(edoCrahCmorf.gnirtS=+o;721=%y;2=*y))y+71(>i(fi{)++i;l<i;0=i(rof;h" +
-    "tgnel.x=l,\\\"\\\"=o,i rav{)y,x(f noitcnuf\")"                               ;
-    while(x=eval(x));
-    //-->
-    //]]>
-    </script>
-
-{% endcapture %}
-{% include templates/contentsection.html heading="Email" %}
