Finish adding meta titles and descriptions

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,9 @@
 ---
-layout  : info-page
-heading : About Aurelitec
+layout      : info-page
+heading     : About Aurelitec
+
+title       : About
+description : At Aurelitec (founded in 1999) we create out of the box apps that can help you work smarter and better, try new things, and bring color to your online life.
 ---
 
 {% capture thecontent %}
