--- a/about/privacy/index.html
+++ b/about/privacy/index.html
@@ -1,6 +1,9 @@
 ---
-layout  : info-page
-heading : Privacy Policy
+layout      : info-page
+heading     : Privacy Policy
+
+title       : Privacy Policy
+description : We take your privacy very seriously. We use information you share with us for our internal purposes only. And we do not sell your information.
 ---
 
 {% capture thecontent %}
