--- a/colortypist/windows/help/index.html
+++ b/colortypist/windows/help/index.html
@@ -1,8 +1,11 @@
 ---
-active : help
-app    : colortypist-windows
-appurl : /colortypist/windows/
-layout : app-page
+active      : help
+app         : colortypist-windows
+appurl      : /colortypist/windows/
+layout      : app-page
+
+title       : Colortypist Help - Learn how to play with colors
+description : Learn how to use Colortypist to view colors while typing their name or code, learn web color names by trial and error, or change your Desktop Wallpaper.
 ---
 
 {% capture thecontent %}
