--- a/colortypist/windows/license/index.html
+++ b/colortypist/windows/license/index.html
@@ -1,7 +1,11 @@
 ---
-app    : colortypist-windows
-appurl : /colortypist/windows/
-layout : app-page
+app         : colortypist-windows
+appurl      : /colortypist/windows/
+layout      : app-page
+
+title       : Colortypist License Agreement - Free for home and business
+description : You are free to use Colortypist to type in a color name or code, and see it fill your screen in real-time, while you type. Read the full License Agreement.
+
 ---
 
 {% capture thecontent %}
