--- a/colortypist/windows/reviews/index.html
+++ b/colortypist/windows/reviews/index.html
@@ -1,8 +1,12 @@
 ---
-active : reviews
-app    : colortypist-windows
-appurl : /colortypist/windows/
-layout : app-page
+active      : reviews
+app         : colortypist-windows
+appurl      : /colortypist/windows/
+layout      : app-page
+
+title       : Colortypist Reviews And Testimonials - What others are saying
+description : \"It's clear that this was not only made for graphic designers, but by them, as well. It's stylish, smooth, and does exactly what you need it to.\"
+
 ---
 
 {% capture thecontent %}
