--- a/colorveil/windows/help/index.html
+++ b/colorveil/windows/help/index.html
@@ -1,8 +1,11 @@
 ---
-active : help
-app    : colorveil-windows
-appurl : /colorveil/windows/
-layout : app-page
+active      : help
+app         : colorveil-windows
+appurl      : /colorveil/windows/
+layout      : app-page
+
+title       : ColorVeil Help - A color filter over your screen - Aurelitec
+description : Learn how to use ColorVeil to easily set a customizable color filter over your screen, reduce eye strain, and help with Dyslexia / Irlen.
 ---
 
 {% capture thecontent %}
