--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -1,10 +1,13 @@
 ---
-active          : overview
-app             : colorveil-windows
-appurl          : /colorveil/windows/
-layout          : app-page
-redirect_from   : "/colorveil/"
+active        : overview
+app           : colorveil-windows
+appurl        : /colorveil/windows/
+layout        : app-page
+redirect_from : "/colorveil/"
 
+title         : ColorVeil - A color filter over your screen
+description   : ColorVeil lets you easily add a customizable color filter over your screen. It reduces eye strain, and helps people with Dyslexia / Irlen.
+image         : /img/apps/colorveil/colorveil-jumbotron-shot.png
 ---
 
 {% capture thecontent %}
