--- a/colorveil/windows/testimonials/middlewichhigh/index.html
+++ b/colorveil/windows/testimonials/middlewichhigh/index.html
@@ -1,7 +1,10 @@
 ---
-app    : colorveil-windows
-appurl : /colorveil/windows/
-layout : app-page
+app         : colorveil-windows
+appurl      : /colorveil/windows/
+layout      : app-page
+
+title       : Middlewich High School Testimonial About ColorVeil
+description : \"At one stroke, we have been able to improve its staff's health, while also broadening access to learning opportunities for many of its students.\"
 ---
 
 {% capture thecontent %}
