--- a/htmtied/windows/help/index.html
+++ b/htmtied/windows/help/index.html
@@ -1,8 +1,11 @@
 ---
-active : help
-app    : htmtied-windows
-appurl : /htmtied/windows/
-layout : app-page
+active      : help
+app         : htmtied-windows
+appurl      : /htmtied/windows/
+layout      : app-page
+
+title       : HTMtied Help - Learn how to create portable links
+description : Learn how to use HTMtied to save your Internet bookmarks as tiny portable HTML link files, and use them anywhere.
 ---
 
 {% capture thecontent %}
