--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
-layout  : default-page
+layout      : default-page
+
+title       : Free Apps and Programs
+description : Born 1999. Creates free programs and apps. The home of CinemaDrape, ColorVeil, InjuredPixels, PixelHealer, Colortypist, WhatsMyCo, Thumbico, and HTMtied.
 ---
 
 <div id="homepage-carousel" class="carousel slide" data-ride="carousel">
