--- a/injuredpixels/android/license/index.html
+++ b/injuredpixels/android/license/index.html
@@ -1,7 +1,10 @@
 ---
-app    : injuredpixels-android
-appurl : /injuredpixels/android/
-layout : app-page
+app         : injuredpixels-android
+appurl      : /injuredpixels/android/
+layout      : app-page
+
+title       : InjuredPixels for Android License Agreement
+description : You are free to use InjuredPixels for Android to check the screen of your Android device for dead pixels, scratches or defects. Read the full License.
 ---
 
 {% capture thecontent %}
