--- a/injuredpixels/windows/index.html
+++ b/injuredpixels/windows/index.html
@@ -1,9 +1,14 @@
 ---
-active          : overview
-app             : injuredpixels-windows
-appurl          : /injuredpixels/windows/
-layout          : app-page
-redirect_from   : "/injuredpixels/"
+active        : overview
+app           : injuredpixels-windows
+appurl        : /injuredpixels/windows/
+layout        : app-page
+redirect_from : "/injuredpixels/"
+
+title         : InjuredPixels for Windows - Check for dead pixels
+description   : Use InjuredPixels for Windows to check your PC, laptop or tablet screen for dead pixels, scratches or defects. Even in the store, before buying.
+image         : /img/apps/injuredpixels/windows/injuredpixels-jumbotron-shot.png
+
 ---
 
 {% capture thecontent %}
