--- a/injuredpixels/windows/license/index.html
+++ b/injuredpixels/windows/license/index.html
@@ -1,7 +1,10 @@
 ---
-app    : injuredpixels-windows
-appurl : /injuredpixels/windows/
-layout : app-page
+app         : injuredpixels-windows
+appurl      : /injuredpixels/windows/
+layout      : app-page
+
+title       : InjuredPixels for Windows License Agreement
+description : You are free to use InjuredPixels for Windows to check your PC, laptop or tablet screen for dead pixels, scratches or defects. Read the full License.
 ---
 
 {% capture thecontent %}
