--- a/pixelhealer/windows/reviews/index.html
+++ b/pixelhealer/windows/reviews/index.html
@@ -1,8 +1,11 @@
 ---
-active : reviews
-app    : pixelhealer-windows
-appurl : /pixelhealer/windows/
-layout : app-page
+active      : reviews
+app         : pixelhealer-windows
+appurl      : /pixelhealer/windows/
+layout      : app-page
+
+title       : PixelHealer Reviews And Testimonials
+description : \"An effective money-saving solution ... and a very user-friendly app that can be used by users of any skill level. We recommend this utility to all users.\"
 ---
 
 {% capture thecontent %}
