--- a/reviews/index.html
+++ b/reviews/index.html
@@ -1,6 +1,9 @@
 ---
-layout  : info-page
-heading : Reviews
+layout      : info-page
+heading     : Reviews
+
+title       : Reviews and Testimonials - What others are saying
+description : Read more reviews like "The verdict&#58; this is simply brilliant. ... Kudos to the developers for a great implementation of such a simple yet brilliant idea."
 ---
 
 {% capture thecontent %}
