--- a/thumbico/windows/help/index.html
+++ b/thumbico/windows/help/index.html
@@ -1,8 +1,11 @@
 ---
-active : help
-app    : thumbico-windows
-appurl : /thumbico/windows/
-layout : app-page
+active      : help
+app         : thumbico-windows
+appurl      : /thumbico/windows/
+layout      : app-page
+
+title       : Thumbico Help - Learn how to view large thumbnails or icons
+description : Learn how to use Thumbico to view the large thumbnail or icon of any file, image, document, video or program on your PC.
 ---
 
 {% capture thecontent %}
