--- a/whatsmyco/web/reviews/index.html
+++ b/whatsmyco/web/reviews/index.html
@@ -1,8 +1,11 @@
 ---
-active : reviews
-app    : whatsmyco-web
-appurl : /whatsmyco/web/
-layout : app-page
+active      : reviews
+app         : whatsmyco-web
+appurl      : /whatsmyco/web/
+layout      : app-page
+
+title       : WhatsMyCo Reviews And Testimonials - What others are saying
+description : \"WhatsMyCo is another innovative idea from Aurelitec that has to do with color. I tell you, they really love color at Aurelitec.\"
 ---
 
 {% capture thecontent %}
