--- a/apps/index.html
+++ b/apps/index.html
@@ -1,6 +1,9 @@
 ---
-layout  : default-page
-heading : Apps
+layout      : default-page
+heading     : Apps
+
+title       : Free Apps and Programs
+description : Aurelitec is the home of CinemaDrape, ColorVeil, InjuredPixels, PixelHealer, Colortypist, WhatsMyCo, Thumbico, and HTMtied.
 ---
 {% include jumbotrons/info.html heading="Apps" %}
 
