--- a/colortypist/windows/index.html
+++ b/colortypist/windows/index.html
@@ -1,9 +1,13 @@
 ---
-active          : overview
-app             : colortypist-windows
-appurl          : /colortypist/windows/
-layout          : app-page
-redirect_from   : "/colortypist/"
+active        : overview
+app           : colortypist-windows
+appurl        : /colortypist/windows/
+layout        : app-page
+redirect_from : "/colortypist/"
+
+title         : Colortypist - Type and view colors in real-time
+description   : Type in a color by its name or code, and see it fill your entire screen, in real-time, while you type. Easily set any color you like as your Wallpaper.
+image         : /img/apps/colortypist/colortypist-jumbotron-shot.png
 ---
 
 {% capture thecontent %}
