--- a/colorveil/windows/reviews/index.html
+++ b/colorveil/windows/reviews/index.html
@@ -1,8 +1,11 @@
 ---
-active : reviews
-app    : colorveil-windows
-appurl : /colorveil/windows/
-layout : app-page
+active      : reviews
+app         : colorveil-windows
+appurl      : /colorveil/windows/
+layout      : app-page
+
+title       : ColorVeil Reviews And Testimonials - What others are saying
+description : \"This is an indispensable software used to prevent eye strain. They've done a kindness to people by making it available to download freely.\"
 ---
 
 {% capture thecontent %}
