--- a/colorveil/windows/testimonials/arrowsmith/index.html
+++ b/colorveil/windows/testimonials/arrowsmith/index.html
@@ -1,7 +1,10 @@
 ---
-app    : colorveil-windows
-appurl : /colorveil/windows/
-layout : app-page
+app         : colorveil-windows
+appurl      : /colorveil/windows/
+layout      : app-page
+
+title       : St Edmund Arrowsmith High School Testimonial
+description : \"ColorVeil gives us the perfect solution, allowing full customisation by way of overlay to match the colours stated by the optometrist.\"
 ---
 
 {% capture thecontent %}
