--- a/htmtied/windows/index.html
+++ b/htmtied/windows/index.html
@@ -1,9 +1,13 @@
 ---
-active          : overview
-app             : htmtied-windows
-appurl          : /htmtied/windows/
-layout          : app-page
-redirect_from   : "/htmtied/"
+active        : overview
+app           : htmtied-windows
+appurl        : /htmtied/windows/
+layout        : app-page
+redirect_from : "/htmtied/"
+
+title         : HTMtied - Save your links as tiny portable HTML files
+description   : Use HTMtied to save your Internet bookmarks as tiny portable HTML link files, and use them anywhere (on any PC, tablet, smartphone, or in the cloud).
+image         : /img/apps/htmtied/htmtied-jumbotron-shot.jpg
 ---
 
 {% capture thecontent %}
