--- a/injuredpixels/android/help/index.html
+++ b/injuredpixels/android/help/index.html
@@ -1,8 +1,11 @@
 ---
-active : help
-app    : injuredpixels-android
-appurl : /injuredpixels/android/
-layout : app-page
+active      : help
+app         : injuredpixels-android
+appurl      : /injuredpixels/android/
+layout      : app-page
+
+title       : InjuredPixels for Android Help
+description : Learn how to use InjuredPixels for Android to check the screen of your smartphone or tablet for dead pixels, scratches or defects.
 ---
 
 {% capture thecontent %}
