--- a/injuredpixels/android/index.html
+++ b/injuredpixels/android/index.html
@@ -1,8 +1,12 @@
 ---
-active : overview
-app    : injuredpixels-android
-appurl : /injuredpixels/android/
-layout : app-page
+active      : overview
+app         : injuredpixels-android
+appurl      : /injuredpixels/android/
+layout      : app-page
+
+title       : InjuredPixels for Android - Check for dead pixels
+description : Use InjuredPixels for Android to check the screen of your smartphone or tablet for dead pixels, scratches or defects. Even in the store, before buying.
+image       : /img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-3x.png
 ---
 
 {% capture thecontent %}
