--- a/injuredpixels/android/reviews/index.html
+++ b/injuredpixels/android/reviews/index.html
@@ -1,8 +1,11 @@
 ---
-active : reviews
-app    : injuredpixels-android
-appurl : /injuredpixels/android/
-layout : app-page
+active      : reviews
+app         : injuredpixels-android
+appurl      : /injuredpixels/android/
+layout      : app-page
+
+title       : InjuredPixels for Android - Reviews And Testimonials
+description : \"Read what others are saying about InjuredPixels for Android.\"
 ---
 
 {% capture thecontent %}
