--- a/injuredpixels/windows/reviews/index.html
+++ b/injuredpixels/windows/reviews/index.html
@@ -1,8 +1,11 @@
 ---
-active : reviews
-app    : injuredpixels-windows
-appurl : /injuredpixels/windows/
-layout : app-page
+active      : reviews
+app         : injuredpixels-windows
+appurl      : /injuredpixels/windows/
+layout      : app-page
+
+title       : InjuredPixels for Windows - Reviews And Testimonials
+description : \"As hardware diagnostics applications go, then, InjuredPixels is just about as simple a program as you'll see. But it's also capable, effective and easy to use.\"
 ---
 
 {% capture thecontent %}
