--- a/pixelhealer/windows/help/index.html
+++ b/pixelhealer/windows/help/index.html
@@ -1,8 +1,11 @@
 ---
-active : help
-app    : pixelhealer-windows
-appurl : /pixelhealer/windows/
-layout : app-page
+active      : help
+app         : pixelhealer-windows
+appurl      : /pixelhealer/windows/
+layout      : app-page
+
+title       : PixelHealer Help - Learn how to fix dead pixels
+description : Learn how to use PixelHealer to try to fix dead, stuck or hot pixels by yourself, before running back to the store.
 ---
 
 {% capture thecontent %}
