--- a/pixelhealer/windows/index.html
+++ b/pixelhealer/windows/index.html
@@ -1,9 +1,13 @@
 ---
-active          : overview
-app             : pixelhealer-windows
-appurl          : /pixelhealer/windows/
-layout          : app-page
-redirect_from   : "/pixelhealer/"
+active        : overview
+app           : pixelhealer-windows
+appurl        : /pixelhealer/windows/
+layout        : app-page
+redirect_from : "/pixelhealer/"
+
+title         : PixelHealer - Try to fix dead, stuck or hot pixels by yourself
+description   : Try to fix dead pixels by yourself, before running back to the store! Use it to fix dead pixels on LCD/TFT screens, on desktop monitors, laptops or tablets.
+image         : /img/apps/pixelhealer/pixelhealer-jumbotron-shot.jpg
 ---
 
 {% capture thecontent %}
