--- a/support/index.html
+++ b/support/index.html
@@ -1,6 +1,9 @@
 ---
-layout  : info-page
-heading : Support
+layout      : info-page
+heading     : Support
+
+title       : Support and Contact
+description : We are always happy to hear from you. Please send your feedback, comments, suggestions or problems. Use the contact form, or send us a direct email.
 ---
 
 {% capture thecontent %}
@@ -9,3 +12,12 @@ heading : Support
     <script type="text/javascript" src="https://form.jotformeu.com/jsform/50793528828367"></script>
 {% endcapture %}
 {% include templates/contentsection.html heading="Contact Form" %}
+
+{% capture thecontent %}
+    <p>Dislike forms? You can also send us a direct email.</p>
+    <p>Email us with as much detail as you can so we can give you the best help possible.</p>
+
+    <a target="_blank" class="btn btn-primary" href="http://www.google.com/recaptcha/mailhide/d?k=01PO-pEhpelNojf9aqrwjL9g==&c=U0CwpA-8dYjPTVPGphEFuW5ME7nOHvva85cerEMiGOk=" role="button">Send Email</a>
+
+{% endcapture %}
+{% include templates/contentsection.html heading="Email" %}
