--- a/thumbico/windows/index.html
+++ b/thumbico/windows/index.html
@@ -1,9 +1,13 @@
 ---
-active          : overview
-app             : thumbico-windows
-appurl          : /thumbico/windows/
-layout          : app-page
-redirect_from   : "/thumbico/"
+active        : overview
+app           : thumbico-windows
+appurl        : /thumbico/windows/
+layout        : app-page
+redirect_from : "/thumbico/"
+
+title         : Thumbico - File icons and thumbnails of any size
+description   : Thumbico displays, resizes, converts and saves file icons and thumbnails. Just drag and drop any file, image, document, video or program. Free and portable.
+image         : /img/apps/thumbico/thumbico-jumbotron-shot.png
 ---
 
 {% capture thecontent %}
