--- a/thumbico/windows/license/index.html
+++ b/thumbico/windows/license/index.html
@@ -1,7 +1,10 @@
 ---
-app    : thumbico-windows
-appurl : /thumbico/windows/
-layout : app-page
+app         : thumbico-windows
+appurl      : /thumbico/windows/
+layout      : app-page
+
+title       : Thumbico License Agreement - Free for home and business
+description : You are free to use Thumbico to view the large thumbnail or icon of any file, image, document, video or program on your PC. Read the full License Agreement.
 ---
 
 {% capture thecontent %}
