--- a/whatsmyco/web/help/index.html
+++ b/whatsmyco/web/help/index.html
@@ -1,8 +1,11 @@
 ---
-active : help
-app    : whatsmyco-web
-appurl : /whatsmyco/web/
-layout : app-page
+active      : help
+app         : whatsmyco-web
+appurl      : /whatsmyco/web/
+layout      : app-page
+
+title       : WhatsMyCo Help - Learn how to get your matching color
+description : Learn how to use WhatsMyCo to type your name or text and get your matching color, and have fun while discovering new colors.
 ---
 
 {% capture thecontent %}
