--- a/whatsmyco/web/license/index.html
+++ b/whatsmyco/web/license/index.html
@@ -1,7 +1,10 @@
 ---
-app    : whatsmyco-web
-appurl : /whatsmyco/web/
-layout : app-page
+app         : whatsmyco-web
+appurl      : /whatsmyco/web/
+layout      : app-page
+
+title       : WhatsMyCo License Agreement - Free for home and business
+description : You are free to use WhatsMyCo to type your name or text and get your matching color, and have fun while discovering new colors. Read the full License.
 ---
 
 {% capture thecontent %}
