Restore first article, fix some meta titles and descriptions

--- a/colortypist/windows/index.html
+++ b/colortypist/windows/index.html
@@ -5,8 +5,8 @@ appurl        : /colortypist/windows/
 layout        : app-page
 redirect_from : "/colortypist/"
 
-title         : Colortypist - Type and view colors in real-time
-description   : Type in a color by its name or code, and see it fill your entire screen, in real-time, while you type. Easily set any color you like as your Wallpaper.
+title         : Colortypist - Type and view a web color in real-time
+description   : Type a color name or a web color code, and see the color fill your screen, in real-time, while you type. And set any color you like as a Desktop Wallpaper.
 image         : /img/apps/colortypist/colortypist-jumbotron-shot.png
 ---
 
