--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -5,8 +5,8 @@ appurl        : /colorveil/windows/
 layout        : app-page
 redirect_from : "/colorveil/"
 
-title         : ColorVeil - A color filter over your screen
-description   : ColorVeil lets you easily add a customizable color filter over your screen. It reduces eye strain, and helps people with Dyslexia / Irlen.
+title         : ColorVeil - Screen color filter and dimmer
+description   : Add a color filter over your screen, over any website you visit, and over any program you use. Dim screen brightness, reduce eye strain, and save energy.
 image         : /img/apps/colorveil/colorveil-jumbotron-shot.png
 ---
 
