--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout      : default-page
 
-title       : Free Apps and Programs
-description : Born 1999. Creates free programs and apps. The home of CinemaDrape, ColorVeil, InjuredPixels, PixelHealer, Colortypist, WhatsMyCo, Thumbico, and HTMtied.
+title       : Free Portable Apps - Focus And Simplify
+description : Free, out of the box apps that help you work smarter and better. Born 1999. Home of CinemaDrape, ColorVeil, InjuredPixels, PixelHealer, Colortypist, &amp; more.
 ---
 
 <div id="homepage-carousel" class="carousel slide" data-ride="carousel">
