--- a/htmtied/windows/index.html
+++ b/htmtied/windows/index.html
@@ -5,8 +5,8 @@ appurl        : /htmtied/windows/
 layout        : app-page
 redirect_from : "/htmtied/"
 
-title         : HTMtied - Save your links as tiny portable HTML files
-description   : Use HTMtied to save your Internet bookmarks as tiny portable HTML link files, and use them anywhere (on any PC, tablet, smartphone, or in the cloud).
+title         : HTMtied - Save your links as tiny portable bookmark files
+description   : HTMtied instantly converts your internet bookmarks into tiny portable bookmark files, that can be used on any PC, tablet, smartphone, or Dropbox.
 image         : /img/apps/htmtied/htmtied-jumbotron-shot.jpg
 ---
 
