--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -21,8 +21,8 @@ description : Download, install and run ColorVeil on any PC, notebook or tablet 
 <h3 class="item-heading">Install ColorVeil 3.0.2.152</h3>
 <p>You can install and run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>. The Installer program will copy ColorVeil on your computer, create a Start Menu entry and set up an uninstaller.</p>
 <p>
-    <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/version/3.0.2.152/colorveil.msi" role="button">Download 32-bit MSI</a>
-    <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/version/3.0.2.152/colorveil-x64.msi" role="button">Download 64-bit MSI</a>
+    <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil.msi" role="button">Download 32-bit MSI</a>
+    <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil-x64.msi" role="button">Download 64-bit MSI</a>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Install" %}
@@ -31,7 +31,7 @@ description : Download, install and run ColorVeil on any PC, notebook or tablet 
 <h3 class="item-heading">Download ColorVeil 3.0.2.152 Portable</h3>
 <p>You can run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>. No installation is required. Just download and unpack the ZIP archive.</p>
 <p>
-    <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/version/3.0.2.152/colorveil-portable.zip" role="button">Download ZIP</a>
+    <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil-portable.zip" role="button">Download ZIP</a>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
