--- a/_testimonials/colorveil/middlewichhigh.html
+++ b/_testimonials/colorveil/middlewichhigh.html
@@ -9,4 +9,4 @@ words : []
 
 "At one stroke, Middlewich High School has been able to improve its staff's health, while also broadening access to
 learning opportunities for many of its students, all at zero cost to the taxpayer."
-<a href="/colorveil/windows/testimonials/middlewichhigh/">Read More</a>
+<a href="{{site.baseurl}}/colorveil/windows/testimonials/middlewichhigh/">Read More</a>
