Try to fix redirect problem

--- a/injuredpixels/windows/index.html
+++ b/injuredpixels/windows/index.html
@@ -3,7 +3,7 @@ active        : overview
 app           : injuredpixels-windows
 appurl        : /injuredpixels/windows/
 layout        : app-page
-redirect_from : "/injuredpixels/"
+redirect_from : "injuredpixels/"
 
 title         : 'InjuredPixels for Windows: Check For Dead Pixels Or Scratches'
 description   : Use InjuredPixels for Windows to check your PC, laptop or tablet screen for dead pixels, scratches or defects. Even in the store, before buying.
