Test site.github.url variable

--- a/about/index.html
+++ b/about/index.html
@@ -28,5 +28,7 @@ description : At Aurelitec (founded in 1999) we create out of the box apps that 
         Germany, Greece, India, Indonesia, Italy, Japan, Korea, Netherlands, Philippines, Poland, Portugal, Romania,
         Russia, Slovakia, Spain, Sri Lanka, Taiwan, Thailand, Turkey, United Kingdom, United States, ...
     </p>
+    <p>{{ site.github.url }}</p>
+    <p><a href="{{ site.github.url }}">Test</a></p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Overview" %}
