--- a/about/index.html
+++ b/about/index.html
@@ -30,5 +30,6 @@ description : At Aurelitec (founded in 1999) we create out of the box apps that 
     </p>
     <p>{{ site.github.url }}</p>
     <p><a href="{{ site.github.url }}">Test</a></p>
+    <p>site.url: {{ site.url }}</p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Overview" %}
