Make all absolute links use site.url variable

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ description : Free, out of the box apps that help you work smarter and better. B
             <p><q>It's clear that this program was not only made for graphic designers, but by them, as well. ... Colortypist is a phenomenal download to have.</q></p>
         </div>
         <div class="col-lg-4 content-item">
-            <h3 class="quote-heading"><a class="heading-link" href="{{site.baseurl}}/colorveil/windows/testimonials/middlewichhigh/">Middlewich High School</a></h3>
+            <h3 class="quote-heading"><a class="heading-link" href="{{ site.github.url }}/colorveil/windows/testimonials/middlewichhigh/">Middlewich High School</a></h3>
             <p><q>We are highly satisfied with this outcome, commend the developer for his generous work and would very much recommend ColorVeil to other schools.</q></p>
         </div>
         <div class="col-lg-4 content-item">
