--- a/injuredpixels/android/download/index.html
+++ b/injuredpixels/android/download/index.html
@@ -12,7 +12,7 @@ description : Install and run InjuredPixels on any smartphone or tablet with And
     <p class="square-middle">
         InjuredPixels is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using InjuredPixels, you must accept its
-        <a href="{{site.baseurl}}/injuredpixels/android/license/">License Agreement</a>.
+        <a href="{{ site.github.url }}/injuredpixels/android/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
