--- a/pixelhealer/windows/download/index.html
+++ b/pixelhealer/windows/download/index.html
@@ -12,7 +12,7 @@ description : Download, install and run PixelHealer on any PC, notebook or table
     <p class="square-middle">
         PixelHealer is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using PixelHealer, you must accept its
-        <a href="{{site.baseurl}}/pixelhealer/windows/license/">License Agreement</a>.
+        <a href="{{ site.github.url }}/pixelhealer/windows/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
@@ -48,7 +48,7 @@ description : Download, install and run PixelHealer on any PC, notebook or table
 {% capture thecontent %}
     <div class="square-middle">
         <a href="http://www.softpedia.com/get/System/System-Info/PixelHealer.shtml" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
         </a>
     </div>
 {% endcapture %}
