--- a/pixelhealer/windows/help/index.html
+++ b/pixelhealer/windows/help/index.html
@@ -15,7 +15,7 @@ description : Learn how to use PixelHealer to try to fix dead, stuck or hot pixe
             use it to fix dead, stuck or hot pixels on LCD or TFT screens, on desktop monitors, laptops or tablets.
         </p>
         <p>
-            First of all, use our own free <a href="{{site.baseurl}}/injuredpixels/windows/" target="_blank">InjuredPixels</a> portable app
+            First of all, use our own free <a href="{{ site.github.url }}/injuredpixels/windows/" target="_blank">InjuredPixels</a> portable app
             to check your screen or tablet for dead, stuck or hot pixels. Then, download and run PixelHealer without
             installation, cover the dead pixel with the colored repair window, and click Start Flashing. PixelHealer
             uses the already tested concept that flashing RGB colors over a dead or stuck pixel will revive it. So
@@ -35,7 +35,7 @@ description : Learn how to use PixelHealer to try to fix dead, stuck or hot pixe
     <div class="help-section">
         <p>
             To start and use PixelHealer, no installation is required: simply click the "Download And Run" button
-            from the <a href="{{site.baseurl}}/pixelhealer/windows/download/">PixelHealer download page</a>, save the Windows
+            from the <a href="{{ site.github.url }}/pixelhealer/windows/download/">PixelHealer download page</a>, save the Windows
             executable program file to a location on your computer and then open or run the file.
         </p>
         <p>
