--- a/pixelhealer/windows/index.html
+++ b/pixelhealer/windows/index.html
@@ -14,7 +14,7 @@ image         : /img/apps/pixelhealer/pixelhealer-jumbotron-shot.jpg
     <div class="row">
         <div class="col-lg-4 content-item">
             <h3 class="item-heading">Step 1: Detect</h3>
-            <p>Use our own free <a href="{{site.baseurl}}/injuredpixels/">InjuredPixels</a> portable app to check your screen or tablet for dead, stuck or hot pixels.</p>
+            <p>Use our own free <a href="{{ site.github.url }}/injuredpixels/">InjuredPixels</a> portable app to check your screen or tablet for dead, stuck or hot pixels.</p>
         </div>
         <div class="col-lg-4 content-item">
             <h3 class="item-heading">Step 2: Start Fixing</h3>
