--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -12,7 +12,7 @@ description : Download, install and run CinemaDrape on any PC, notebook or table
     <p class="square-middle">
         CinemaDrape is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using CinemaDrape, you must accept its
-        <a href="{{site.baseurl}}/cinemadrape/windows/license/">License Agreement</a>.
+        <a href="{{ site.github.url }}/cinemadrape/windows/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
@@ -38,10 +38,10 @@ description : Download, install and run CinemaDrape on any PC, notebook or table
 {% capture thecontent %}
     <div class="square-middle">
         <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/CinemaDrape.shtml" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
         </a>
         <a href="http://cinemadrape.software.informer.com" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" />
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" />
         </a>
     </div>
 {% endcapture %}
