--- a/colortypist/windows/download/index.html
+++ b/colortypist/windows/download/index.html
@@ -12,7 +12,7 @@ description : Download, install and run Colortypist on any PC, notebook or table
     <p class="square-middle">
         Colortypist is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using Colortypist, you must accept
-        its <a href="{{site.baseurl}}/colortypist/windows/license/">License Agreement</a>.
+        its <a href="{{ site.github.url }}/colortypist/windows/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
@@ -48,7 +48,7 @@ description : Download, install and run Colortypist on any PC, notebook or table
 {% capture thecontent %}
     <div class="square-middle">
         <a href="http://www.softpedia.com/get/Internet/WEB-Design/Web-Design-related/colortypist.shtml" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
         </a>
     </div>
 {% endcapture %}
