--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -12,7 +12,7 @@ description : Download, install and run ColorVeil on any PC, notebook or tablet 
     <p class="square-middle">
         ColorVeil is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using ColorVeil, you must accept its
-        <a href="{{site.baseurl}}/colorveil/windows/license/">License Agreement</a>.
+        <a href="{{ site.github.url }}/colorveil/windows/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
@@ -39,9 +39,9 @@ description : Download, install and run ColorVeil on any PC, notebook or tablet 
 {% capture thecontent %}
     <div class="square-middle">
         <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/ColorVeil.shtml" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" /></a>
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" /></a>
         <a href="http://colorveil.software.informer.com" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" /></a>
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" /></a>
     </div>
 {% endcapture %}
 {% include templates/contentsection.html heading="100% Clean" %}
