--- a/htmtied/windows/download/index.html
+++ b/htmtied/windows/download/index.html
@@ -12,7 +12,7 @@ description : Download, install and run HTMtied on any PC, notebook or tablet wi
     <p class="square-middle">
         HTMtied is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using HTMtied, you must accept
-        its <a href="{{site.baseurl}}/htmtied/windows/license/">License Agreement</a>.
+        its <a href="{{ site.github.url }}/htmtied/windows/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
@@ -34,7 +34,7 @@ description : Download, install and run HTMtied on any PC, notebook or tablet wi
 {% capture thecontent %}
     <div class="square-middle">
         <a href="http://www.softpedia.com/get/PORTABLE-SOFTWARE/Office/Clipboard/HTMtied-Portable.shtml" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
         </a>
     </div>
 {% endcapture %}
