--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -12,7 +12,7 @@ description : Download, install and run InjuredPixels on any PC, notebook or tab
     <p class="square-middle">
         InjuredPixels is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using InjuredPixels, you must accept its
-        <a href="{{site.baseurl}}/injuredpixels/windows/license/">License Agreement</a>.
+        <a href="{{ site.github.url }}/injuredpixels/windows/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
@@ -62,7 +62,7 @@ description : Download, install and run InjuredPixels on any PC, notebook or tab
 {% capture thecontent %}
     <div class="square-middle">
         <a href="http://www.softpedia.com/get/System/System-Miscellaneous/InjuredPixels.shtml" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
         </a>
     </div>
 {% endcapture %}
