--- a/thumbico/windows/download/index.html
+++ b/thumbico/windows/download/index.html
@@ -12,7 +12,7 @@ description : Download, install and run Thumbico on any PC, notebook or tablet w
     <p class="square-middle">
         Thumbico is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using Thumbico, you must accept
-        its <a href="{{site.baseurl}}/thumbico/windows/license/">License Agreement</a>.
+        its <a href="{{ site.github.url }}/thumbico/windows/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
@@ -48,7 +48,7 @@ description : Download, install and run Thumbico on any PC, notebook or tablet w
 {% capture thecontent %}
     <div class="square-middle">
         <a href="http://www.softpedia.com/get/Multimedia/Graphic/Graphic-Editors/Thumbico.shtml" target="_blank">
-            <img height="120" class="featured-logo" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
         </a>
     </div>
 {% endcapture %}
