--- a/whatsmyco/web/download/index.html
+++ b/whatsmyco/web/download/index.html
@@ -12,7 +12,7 @@ description : Run WhatsMyCo in any modern browser, and on any device - on PCs, n
     <p class="square-middle">
         WhatsMyCo is free for use in any environment, including but not necessarily limited to: personal, academic,
         commercial, government, business, non-profit, and for-profit. Before using WhatsMyCo, you must accept its
-        <a href="{{site.baseurl}}/whatsmyco/web/license/">License Agreement</a>.
+        <a href="{{ site.github.url }}/whatsmyco/web/license/">License Agreement</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
