Add legacy redirects to download pages

--- a/colortypist/windows/download/index.html
+++ b/colortypist/windows/download/index.html
@@ -1,11 +1,12 @@
 ---
-active      : download
-app         : colortypist-windows
-appurl      : /colortypist/windows/
-layout      : download-page
+active        : download
+app           : colortypist-windows
+appurl        : /colortypist/windows/
+layout        : download-page
+redirect_from : /colortypist/download/
 
-title       : Colortypist for Windows - Free Download
-description : Download, install and run Colortypist on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
+title         : Colortypist for Windows - Free Download
+description   : Download, install and run Colortypist on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
 ---
 
 {% capture thecontent %}
