--- a/colortypist/windows/index.html
+++ b/colortypist/windows/index.html
@@ -3,7 +3,7 @@ active        : overview
 app           : colortypist-windows
 appurl        : /colortypist/windows/
 layout        : app-page
-redirect_from : "/colortypist/"
+redirect_from : /colortypist/
 
 title         : Colortypist - Type and view a web color in real-time
 description   : Type a color name or a web color code, and see the color fill your screen, in real-time, while you type. And set any color you like as a Desktop Wallpaper.
