--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -1,11 +1,12 @@
 ---
-active      : download
-app         : colorveil-windows
-appurl      : /colorveil/windows/
-layout      : download-page
+active        : download
+app           : colorveil-windows
+appurl        : /colorveil/windows/
+layout        : download-page
+redirect_from : /colorveil/download/
 
-title       : ColorVeil for Windows - Free Download
-description : Download, install and run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
+title         : ColorVeil for Windows - Free Download
+description   : Download, install and run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
 ---
 
 {% capture thecontent %}
