--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -3,7 +3,7 @@ active        : overview
 app           : colorveil-windows
 appurl        : /colorveil/windows/
 layout        : app-page
-redirect_from : "/colorveil/"
+redirect_from : /colorveil/
 
 title         : ColorVeil - Screen color filter and dimmer
 description   : Add a color filter over your screen, over any website you visit, and over any program you use. Dim screen brightness, reduce eye strain, and save energy.
