--- a/pixelhealer/windows/index.html
+++ b/pixelhealer/windows/index.html
@@ -3,7 +3,7 @@ active        : overview
 app           : pixelhealer-windows
 appurl        : /pixelhealer/windows/
 layout        : app-page
-redirect_from : "/pixelhealer/"
+redirect_from : /pixelhealer/
 
 title         : PixelHealer - Try to fix dead pixels by yourself
 description   : Try to fix dead pixels by yourself, before running back to the store! Use it to fix dead pixels on LCD/TFT screens, on desktop monitors, laptops or tablets.
