--- a/whatsmyco/web/download/index.html
+++ b/whatsmyco/web/download/index.html
@@ -1,11 +1,12 @@
 ---
-app         : whatsmyco-web
-active      : download
-appurl      : /whatsmyco/web/
-layout      : download-page
+app           : whatsmyco-web
+active        : download
+appurl        : /whatsmyco/web/
+layout        : download-page
+redirect_from : /whatsmyco/run/
 
-title       : WhatsMyCo - Run In Your Browser
-description : Run WhatsMyCo in any modern browser, and on any device - on PCs, notebooks, tablets, or smartphones. No install and no plugins required.
+title         : WhatsMyCo - Run In Your Browser
+description   : Run WhatsMyCo in any modern browser, and on any device - on PCs, notebooks, tablets, or smartphones. No install and no plugins required.
 ---
 
 {% capture thecontent %}
