--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -1,11 +1,12 @@
 ---
-active      : download
-app         : cinemadrape-windows
-appurl      : /cinemadrape/windows/
-layout      : download-page
+active        : download
+app           : cinemadrape-windows
+appurl        : /cinemadrape/windows/
+layout        : download-page
+redirect_from : /cinemadrape/download/
 
-title       : CinemaDrape for Windows - Free Download
-description : Download, install and run CinemaDrape on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
+title         : CinemaDrape for Windows - Free Download
+description   : Download, install and run CinemaDrape on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
 ---
 
 {% capture thecontent %}
