--- a/cinemadrape/windows/index.html
+++ b/cinemadrape/windows/index.html
@@ -3,7 +3,7 @@ active        : overview
 app           : cinemadrape-windows
 appurl        : /cinemadrape/windows/
 layout        : app-page
-redirect_from : "/cinemadrape/"
+redirect_from : /cinemadrape/
 
 title         : CinemaDrape - Focus on your current task on screen
 description   : CinemaDrape helps you focus on your current task, by instantly blanking or dimming the other less important areas on web pages or your Desktop.
