--- a/htmtied/windows/download/index.html
+++ b/htmtied/windows/download/index.html
@@ -1,8 +1,9 @@
 ---
-active      : download
-app         : htmtied-windows
-appurl      : /htmtied/windows/
-layout      : download-page
+active        : download
+app           : htmtied-windows
+appurl        : /htmtied/windows/
+layout        : download-page
+redirect_from : /htmtied/download/
 
 title       : HTMtied for Windows - Free Download
 description : Download, install and run HTMtied on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
