--- a/htmtied/windows/index.html
+++ b/htmtied/windows/index.html
@@ -3,7 +3,7 @@ active        : overview
 app           : htmtied-windows
 appurl        : /htmtied/windows/
 layout        : app-page
-redirect_from : "/htmtied/"
+redirect_from : /htmtied/
 
 title         : HTMtied - Save your links as tiny portable bookmark files
 description   : HTMtied instantly converts your internet bookmarks into tiny portable bookmark files, that can be used on any PC, tablet, smartphone, or Dropbox.
