--- a/thumbico/windows/download/index.html
+++ b/thumbico/windows/download/index.html
@@ -1,11 +1,12 @@
 ---
-active      : download
-app         : thumbico-windows
-appurl      : /thumbico/windows/
-layout      : download-page
+active        : download
+app           : thumbico-windows
+appurl        : /thumbico/windows/
+layout        : download-page
+redirect_from : /thumbico/download/
 
-title       : Thumbico for Windows - Free Download
-description : Download, install and run Thumbico on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
+title         : Thumbico for Windows - Free Download
+description   : Download, install and run Thumbico on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
 ---
 
 {% capture thecontent %}
