--- a/whatsmyco/web/index.html
+++ b/whatsmyco/web/index.html
@@ -3,7 +3,7 @@ active        : overview
 app           : whatsmyco-web
 appurl        : /whatsmyco/web/
 layout        : app-page
-redirect_from : "/whatsmyco/"
+redirect_from : /whatsmyco/
 
 title         : WhatsMyCo - Type your name and get your matching color
 description   : Open WhatsMyCo in your browser, type your name or text, and get your matching color! A fun and personal way to discover colors!
