Improve the jumbotron of the download pages

--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -1,6 +1,7 @@
 ---
 active        : download
 app           : cinemadrape-windows
+appname       : CinemaDrape
 appurl        : /cinemadrape/windows/
 layout        : download-page
 redirect_from : /cinemadrape/download/
