--- a/colortypist/windows/download/index.html
+++ b/colortypist/windows/download/index.html
@@ -1,6 +1,7 @@
 ---
 active        : download
 app           : colortypist-windows
+appname       : Colortypist
 appurl        : /colortypist/windows/
 layout        : download-page
 redirect_from : /colortypist/download/
