--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -1,6 +1,7 @@
 ---
 active        : download
 app           : colorveil-windows
+appname       : ColorVeil
 appurl        : /colorveil/windows/
 layout        : download-page
 redirect_from : /colorveil/download/
