--- a/htmtied/windows/download/index.html
+++ b/htmtied/windows/download/index.html
@@ -1,6 +1,7 @@
 ---
 active        : download
 app           : htmtied-windows
+appname       : HTMtied
 appurl        : /htmtied/windows/
 layout        : download-page
 redirect_from : /htmtied/download/
