--- a/injuredpixels/android/download/index.html
+++ b/injuredpixels/android/download/index.html
@@ -1,6 +1,7 @@
 ---
 active      : download
 app         : injuredpixels-android
+appname     : InjuredPixels
 appurl      : /injuredpixels/android/
 layout      : download-page
 
