--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -1,6 +1,7 @@
 ---
 active        : download
 app           : injuredpixels-windows
+appname       : InjuredPixels
 appurl        : /injuredpixels/windows/
 layout        : download-page
 redirect_from : /injuredpixels/download/
