--- a/pixelhealer/windows/download/index.html
+++ b/pixelhealer/windows/download/index.html
@@ -1,6 +1,7 @@
 ---
 active        : download
 app           : pixelhealer-windows
+appname       : PixelHealer
 appurl        : /pixelhealer/windows/
 layout        : download-page
 redirect_from : /pixelhealer/download/
