--- a/thumbico/windows/download/index.html
+++ b/thumbico/windows/download/index.html
@@ -1,6 +1,7 @@
 ---
 active        : download
 app           : thumbico-windows
+appname       : Thumbico
 appurl        : /thumbico/windows/
 layout        : download-page
 redirect_from : /thumbico/download/
