--- a/whatsmyco/web/download/index.html
+++ b/whatsmyco/web/download/index.html
@@ -1,5 +1,6 @@
 ---
 app           : whatsmyco-web
+appname       : WhatsMyCo
 active        : download
 appurl        : /whatsmyco/web/
 layout        : download-page
