Update footer social links and icons, add new reviews and logos

--- a/about/index.html
+++ b/about/index.html
@@ -23,10 +23,9 @@ description : At Aurelitec (founded in 1999) we create out of the box apps that 
         Magazine, ...
     </p>
     <p>
-        Geographically speaking, our apps have been featured, reviewed and recommended in many countries, on many
-        continents: in Argentina, Belgium, Brazil, Chile, China, Croatia, Dominican Republic, El Salvador, France,
-        Germany, Greece, India, Indonesia, Italy, Japan, Korea, Netherlands, Philippines, Poland, Portugal, Romania,
-        Russia, Slovakia, Spain, Sri Lanka, Taiwan, Thailand, Turkey, United Kingdom, United States, ...
+        Geographically speaking, our apps have been featured, reviewed and recommended in many countries, on many continents: in Argentina, Belgium, Brazil, Chile, China, Croatia,
+        Dominican Republic, El Salvador, France, Germany, Greece, India, Indonesia, Italy, Japan, Korea, Netherlands, Pakistan, Philippines, Poland, Portugal, Romania, Russia, Slovakia,
+        Slovenia, Spain, Sri Lanka, Taiwan, Thailand, Turkey, United Kingdom, United States, ...
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Overview" %}
