--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -33,8 +33,8 @@ image         : /img/apps/colorveil/colorveil-jumbotron-shot.png
             <p>ColorVeil makes it very easy to instantly turn the color filter on and off: simply click its icon in the notification area. Or press a (customizable) keyboard shortcut.</p>
         </div>
         <div class="col-lg-4 content-item">
-            <h4 class="item-heading">Stealth &amp; More</h4>
-            <p>ColorVeil can go stealth and hide its turn off switch, helping you play pranks on your friends or family. It can also spice up screencasts or presentations, by adding color to the video output.</p>
+            <h4 class="item-heading">Portable &amp; Installable</h4>
+            <p>You can run ColorVeil on any PC without installation: just download and unpack the ZIP archive. And you can also install and deploy it across your network using the MSI setup.</p>
         </div>
     </div>
 {% endcapture %}
